Fix T47971: rigid body baking crash due to thread race condition.